--- a/print.html
+++ b/print.html
@@ -1,2 +1,92 @@
 <!DOCTYPE html>
-<!-- Last Published: Tue Sep 17 2024 20:28:23 GMT+0000 (Coordinated Universal Time) --><html data-wf-domain="www.metropolisrevista.com" data-wf-page="646018e21b92aa5d4bda8073" data-wf-site="641274e742cb313e92c2bda9"><head><meta charset="utf-8"><title>Print</title><meta content="Print" property="og:title"><meta content="Print" property="twitter:title"><meta content="width=device-width, initial-scale=1" name="viewport"><link href="https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/css/metro-fb9160.webflow.f54cdda9f.css" rel="stylesheet" type="text/css"><link href="https://fonts.googleapis.com" rel="preconnect"><link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous"><script src="js/1.6.26-webfont.js" type="text/javascript"></script><script type="text/javascript">WebFont.load({  google: {    families: ["Bodoni Moda:regular"]  }});</script><script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script><link href="favicons/641274e742cb313e92c2bda9-645ff9bcba26bca4518a17f3_metropolis_favicon.png" rel="shortcut icon" type="image/x-icon"><link href="favicons/641274e742cb313e92c2bda9-645ff9eac004d574777091b7_metropolis_tile.png" rel="apple-touch-icon"></head><body><div class="div-block print"><div class="header"><div class="header"><div class="metro-inner wide"><div><h4 class="tagline white">Vida, arte y personalidades de las</h4></div><div class="flex header-flex"><div class="left-3"><div data-w-id="9fbe14ef-4cca-cde4-1736-4b9ad64ad559" class="hamburger"><div data-w-id="9fbe14ef-4cca-cde4-1736-4b9ad64ad55a" class="line white"></div><div data-w-id="9fbe14ef-4cca-cde4-1736-4b9ad64ad55b" class="line white"></div></div><div class="menu"><a href="#" class="menu-item active">Manifesto</a><a href="#" class="menu-item print-menu">About</a><a href="#" class="menu-item print-menu">Issues</a><a href="https://cafecito.app/metropolis" class="menu-item print-menu">Donate</a></div></div><div class="middle-3"><a href="www.metropolisrevista.html" class="w-inline-block"><img src="images/641274e742cb313e92c2bda9-641e3416e2af210dec6f31a2_metro_logo_pink.svg" loading="lazy" alt="" class="image"></a></div><div class="right-3"><div class="menu"><a href="#" class="menu-item print-menu">Print</a></div></div></div></div></div></div><div class="metro-manifesto manifesto"><div class="metro-inner wide"><h1 class="large-heading print-tile">Print</h1></div><div class="metro-inner wide"><div class="flex"><div class="left _30"></div><div class="right _70"><p class="manifesto-copy print-copy">Gracias al apoyo del Fondo Nacional de las Artes y Mecenazgo de la Ciudad de Buenos Aires, fue posible comenzar con el dise&ntilde;o y maqueta de un numero Aniversario de la revista Metr&oacute;polis.<br>&zwj;</p><img src="images/641274e742cb313e92c2bda9-64601c26bc805b04644d852c_Libro%20Aniversario%20Vacio.jpg" loading="lazy" sizes="(max-width: 479px) 86vw, (max-width: 2388px) 67vw, 1600px" srcset="https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601c26bc805b04644d852c_Libro%20Aniversario%20Vacio-p-500.jpg 500w, https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601c26bc805b04644d852c_Libro%20Aniversario%20Vacio-p-800.jpg 800w, https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601c26bc805b04644d852c_Libro%20Aniversario%20Vacio-p-1080.jpg 1080w, https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601c26bc805b04644d852c_Libro%20Aniversario%20Vacio.jpg 1600w" alt=""><p class="manifesto-copy print-copy"><br>La totalidad de los 13 n&uacute;meros ya est&aacute; digitalizada y restaurada.<br>Nos encontramos ahora en un proceso de dise&ntilde;o del ejemplar Aniversario que contar&aacute; aproximadamente de 250 p&aacute;ginas.<br><br></p><img src="images/641274e742cb313e92c2bda9-64601c70721de7ea5f2910d8_Portada%20fondo%20blanco.jpg" loading="lazy" sizes="(max-width: 479px) 86vw, (max-width: 8955px) 67vw, 6000px" srcset="https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601c70721de7ea5f2910d8_Portada%20fondo%20blanco-p-500.jpg 500w, https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601c70721de7ea5f2910d8_Portada%20fondo%20blanco-p-800.jpg 800w, https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601c70721de7ea5f2910d8_Portada%20fondo%20blanco-p-1080.jpg 1080w, https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601c70721de7ea5f2910d8_Portada%20fondo%20blanco-p-1600.jpg 1600w, https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601c70721de7ea5f2910d8_Portada%20fondo%20blanco-p-2000.jpg 2000w, https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601c70721de7ea5f2910d8_Portada%20fondo%20blanco-p-2600.jpg 2600w, https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601c70721de7ea5f2910d8_Portada%20fondo%20blanco-p-3200.jpg 3200w, https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601c70721de7ea5f2910d8_Portada%20fondo%20blanco.jpg 6000w" alt=""><p class="manifesto-copy print-copy"><br>Si estas interesadx en contribuir al proyecto de alguna forma, muy bienvenido <a href="mailto:dupuy.franco@gmail.com" class="text-link white">tu contacto</a>.<strong><br></strong></p><p class="manifesto-copy print-copy"><br>Nos cuesta creer que sin un proyecto de recuperaci&oacute;n y re impresi&oacute;n como este, podr&iacute;a perderse material cultural clave, social y art&iacute;stico para la sociedad porte&ntilde;a.<strong><br></strong></p><div data-poster-url="https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601a986eeb2a8e193d6ddc_Pase de Pagina Susana Gimenez-poster-00001.jpg" data-video-urls="https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601a986eeb2a8e193d6ddc_Pase de Pagina Susana Gimenez-transcode.mp4,https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601a986eeb2a8e193d6ddc_Pase de Pagina Susana Gimenez-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="metro-vido w-background-video w-background-video-atom"><video id="4f83e56a-2bd5-9f8a-948e-1f18744ca810-video" autoplay="" loop="" style='background-image:url("https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601a986eeb2a8e193d6ddc_Pase de Pagina Susana Gimenez-poster-00001.jpg")' muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover"><source src="https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601a986eeb2a8e193d6ddc_Pase%20de%20Pagina%20Susana%20Gimenez-transcode.mp4" data-wf-ignore="true"></source><source src="https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601a986eeb2a8e193d6ddc_Pase%20de%20Pagina%20Susana%20Gimenez-transcode.webm" data-wf-ignore="true"></source></video></div></div></div></div></div></div><div class="footer"><div class="metro-inner wide"><div class="flex"><div class="left-30"><img src="images/641274e742cb313e92c2bda9-641cd4c57c3983638eeada98_EXIT.svg" loading="lazy" alt="" class="image-3"></div><div class="right footer-right"><h4 class="footer-text"><strong>Contactate con nosotrxs</strong></h4><div class="div-block-8 submit-button contact-button"><a href="mailto:dupuy.franco@gmail.com" class="link-block-3 w-inline-block"></a><div class="cotact-button-text">CONTACT</div></div></div></div></div></div><div class="logos flex logo-wrapper"><div class="metro-inner wide logod"><img src="images/641274e742cb313e92c2bda9-64601df0892d47d0681c1e1b_ba_logo.svg" loading="lazy" alt="" class="logo"><img src="images/641274e742cb313e92c2bda9-64601e4c02edee1b7003118e_CDCDF_logo.svg" loading="lazy" alt="" class="logo custom-size"><img src="images/641274e742cb313e92c2bda9-64601e0f349b1dfb49de2ea8_fna.svg" loading="lazy" alt="" class="logo"></div></div><div style="display:none" class="mobile-menu"><div class="mobile-menu-wrapper"><div class="menu menu-mobile"><a href="manifesto.html" class="menu-item">Manifesto</a><a href="issues.html" class="menu-item">Issues</a><a href="about.html" class="menu-item">About</a><a href="https://cafecito.app/metropolis" class="menu-item">Donate</a><a href="print.html" aria-current="page" class="menu-item w--current">Print</a></div></div></div><script src="js/js-jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script><script src="js/js-webflow.3b33ede78.js" type="text/javascript"></script></body></html>
+<!-- Last Published: Tue Sep 17 2024 20:28:23 GMT+0000 (Coordinated Universal Time) -->
+<html data-wf-domain="www.metropolisrevista.com" data-wf-page="646018e21b92aa5d4bda8073" data-wf-site="641274e742cb313e92c2bda9">
+   <head>
+      <meta charset="utf-8">
+      <title>Print</title>
+      <meta content="Print" property="og:title">
+      <meta content="Print" property="twitter:title">
+      <meta content="width=device-width, initial-scale=1" name="viewport">
+      <link href="https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/css/metro-fb9160.webflow.f54cdda9f.css" rel="stylesheet" type="text/css">
+      <link href="https://fonts.googleapis.com" rel="preconnect">
+      <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
+      <script src="js/1.6.26-webfont.js" type="text/javascript"></script><script type="text/javascript">WebFont.load({  google: {    families: ["Bodoni Moda:regular"]  }});</script><script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
+      <link href="favicons/641274e742cb313e92c2bda9-645ff9bcba26bca4518a17f3_metropolis_favicon.png" rel="shortcut icon" type="image/x-icon">
+      <link href="favicons/641274e742cb313e92c2bda9-645ff9eac004d574777091b7_metropolis_tile.png" rel="apple-touch-icon">
+   </head>
+   <body>
+      <div class="div-block print">
+         <div class="header">
+            <div class="header">
+               <div class="metro-inner wide">
+                  <div>
+                     <h4 class="tagline white">Vida, arte y personalidades de las</h4>
+                  </div>
+                  <div class="flex header-flex">
+                     <div class="left-3">
+                        <div data-w-id="9fbe14ef-4cca-cde4-1736-4b9ad64ad559" class="hamburger">
+                           <div data-w-id="9fbe14ef-4cca-cde4-1736-4b9ad64ad55a" class="line white"></div>
+                           <div data-w-id="9fbe14ef-4cca-cde4-1736-4b9ad64ad55b" class="line white"></div>
+                        </div>
+                        <div class="menu"><a href="#" class="menu-item active">Manifesto</a><a href="#" class="menu-item print-menu">About</a><a href="#" class="menu-item print-menu">Issues</a><a href="https://cafecito.app/metropolis" class="menu-item print-menu">Donate</a></div>
+                     </div>
+                     <div class="middle-3"><a href="www.metropolisrevista.html" class="w-inline-block"><img src="images/641274e742cb313e92c2bda9-641e3416e2af210dec6f31a2_metro_logo_pink.svg" loading="lazy" alt="" class="image"></a></div>
+                     <div class="right-3">
+                        <div class="menu"><a href="#" class="menu-item print-menu">Print</a></div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div class="metro-manifesto manifesto">
+            <div class="metro-inner wide">
+               <h1 class="large-heading print-tile">Print</h1>
+            </div>
+            <div class="metro-inner wide">
+               <div class="flex">
+                  <div class="left _30"></div>
+                  <div class="right _70">
+                     <p class="manifesto-copy print-copy">Gracias al apoyo del Fondo Nacional de las Artes y Mecenazgo de la Ciudad de Buenos Aires, fue posible comenzar con el dise&ntilde;o y maqueta de un numero Aniversario de la revista Metr&oacute;polis.<br>&zwj;</p>
+                     <img src="images/641274e742cb313e92c2bda9-64601c26bc805b04644d852c_Libro%20Aniversario%20Vacio.jpg" loading="lazy" sizes="(max-width: 479px) 86vw, (max-width: 2388px) 67vw, 1600px" srcset="https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601c26bc805b04644d852c_Libro%20Aniversario%20Vacio-p-500.jpg 500w, https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601c26bc805b04644d852c_Libro%20Aniversario%20Vacio-p-800.jpg 800w, https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601c26bc805b04644d852c_Libro%20Aniversario%20Vacio-p-1080.jpg 1080w, https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601c26bc805b04644d852c_Libro%20Aniversario%20Vacio.jpg 1600w" alt="">
+                     <p class="manifesto-copy print-copy"><br>La totalidad de los 13 n&uacute;meros ya est&aacute; digitalizada y restaurada.<br>Nos encontramos ahora en un proceso de dise&ntilde;o del ejemplar Aniversario que contar&aacute; aproximadamente de 250 p&aacute;ginas.<br><br></p>
+                     <img src="images/641274e742cb313e92c2bda9-64601c70721de7ea5f2910d8_Portada%20fondo%20blanco.jpg" loading="lazy" sizes="(max-width: 479px) 86vw, (max-width: 8955px) 67vw, 6000px" srcset="https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601c70721de7ea5f2910d8_Portada%20fondo%20blanco-p-500.jpg 500w, https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601c70721de7ea5f2910d8_Portada%20fondo%20blanco-p-800.jpg 800w, https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601c70721de7ea5f2910d8_Portada%20fondo%20blanco-p-1080.jpg 1080w, https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601c70721de7ea5f2910d8_Portada%20fondo%20blanco-p-1600.jpg 1600w, https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601c70721de7ea5f2910d8_Portada%20fondo%20blanco-p-2000.jpg 2000w, https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601c70721de7ea5f2910d8_Portada%20fondo%20blanco-p-2600.jpg 2600w, https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601c70721de7ea5f2910d8_Portada%20fondo%20blanco-p-3200.jpg 3200w, https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601c70721de7ea5f2910d8_Portada%20fondo%20blanco.jpg 6000w" alt="">
+                     <p class="manifesto-copy print-copy"><br>Si estas interesadx en contribuir al proyecto de alguna forma, muy bienvenido <a href="mailto:dupuy.franco@gmail.com" class="text-link white">tu contacto</a>.<strong><br></strong></p>
+                     <p class="manifesto-copy print-copy"><br>Nos cuesta creer que sin un proyecto de recuperaci&oacute;n y re impresi&oacute;n como este, podr&iacute;a perderse material cultural clave, social y art&iacute;stico para la sociedad porte&ntilde;a.<strong><br></strong></p>
+                     <div data-poster-url="https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601a986eeb2a8e193d6ddc_Pase de Pagina Susana Gimenez-poster-00001.jpg" data-video-urls="https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601a986eeb2a8e193d6ddc_Pase de Pagina Susana Gimenez-transcode.mp4,https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601a986eeb2a8e193d6ddc_Pase de Pagina Susana Gimenez-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="metro-vido w-background-video w-background-video-atom">
+                        <video id="4f83e56a-2bd5-9f8a-948e-1f18744ca810-video" autoplay="" loop="" style='background-image:url("https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601a986eeb2a8e193d6ddc_Pase de Pagina Susana Gimenez-poster-00001.jpg")' muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
+                           <source src="https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601a986eeb2a8e193d6ddc_Pase%20de%20Pagina%20Susana%20Gimenez-transcode.mp4" data-wf-ignore="true">
+                           </source>
+                           <source src="https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601a986eeb2a8e193d6ddc_Pase%20de%20Pagina%20Susana%20Gimenez-transcode.webm" data-wf-ignore="true">
+                           </source>
+                        </video>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+      <div class="footer">
+         <div class="metro-inner wide">
+            <div class="flex">
+               <div class="left-30"><img src="images/641274e742cb313e92c2bda9-641cd4c57c3983638eeada98_EXIT.svg" loading="lazy" alt="" class="image-3"></div>
+               <div class="right footer-right">
+                  <h4 class="footer-text"><strong>Contactate con nosotrxs</strong></h4>
+                  <div class="div-block-8 submit-button contact-button">
+                     <a href="mailto:dupuy.franco@gmail.com" class="link-block-3 w-inline-block"></a>
+                     <div class="cotact-button-text">CONTACT</div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+      <div class="logos flex logo-wrapper">
+        <div class="metro-inner wide logo-wrapper logod"><img src="/images/logo-metro.jpg"><img src="https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601df0892d47d0681c1e1b_ba_logo.svg" loading="lazy" alt="" class="logo"/><img src="https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601e4c02edee1b7003118e_CDCDF_logo.svg" loading="lazy" alt="" class="logo custom-size"/><img src="https://cdn.prod.website-files.com/641274e742cb313e92c2bda9/64601e0f349b1dfb49de2ea8_fna.svg" loading="lazy" alt="" class="logo"/></div>
+    </div>
+      <div style="display:none" class="mobile-menu">
+         <div class="mobile-menu-wrapper">
+            <div class="menu menu-mobile"><a href="manifesto.html" class="menu-item">Manifesto</a><a href="issues.html" class="menu-item">Issues</a><a href="about.html" class="menu-item">About</a><a href="https://cafecito.app/metropolis" class="menu-item">Donate</a><a href="print.html" aria-current="page" class="menu-item w--current">Print</a></div>
+         </div>
+      </div>
+      <script src="js/js-jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script><script src="js/js-webflow.3b33ede78.js" type="text/javascript"></script>
+   </body>
+</html>
